<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTexttestMultiLine2"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_your_name"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_your_roon_no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_the_number_of_guard"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <Button
        android:id="@+id/button"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="sendSMS"
        android:text="@string/send_sms_to_guard" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:text="@string/logout" />


</LinearLayout>